[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.21.0"
eframe = { version = "0.21.0", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "wgpu",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }

# You only need serde if you want app persistence:
serde = { version = "1.0.159", features = ["derive"] }
egui_dock = "0.4.2"
re_log = "0.4.0"
egui_extras = "0.21.0"
renderer = { path = "../renderer" }
egui-wgpu = "0.21.0"
wgpu = "0.15.1"
bytemuck = { version = "1.13.1", features = ["derive"] }
rand = "0.8.5"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
